# braid-visualiser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-deployment.yaml
src/braidvisualiser/: __init__.py  braid.py
