[tool.poetry]
name = "braidvisualiser"
version = "0.2.0"
description = "Python library providing functionality for the creation and rendering of Artin braids."
authors = ["Rex Greenway"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
numpy = "^1.26.3"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
